--- a/WebServiceAPI/WebServiceAPI.csproj
+++ b/WebServiceAPI/WebServiceAPI.csproj
@@ -10,6 +10,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Animal\Animal.csproj" />
+    <ProjectReference Include="..\Consola 1\Consola 1.csproj" />
+    <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
 </Project>
